tests/algorithms/transpiler/Swift/maths/primelib.error
signal: illegal instruction
main/main.swift:281: Fatal error: arguments must be prime and p1 < p2

*** Signal 4: Backtracing from 0x7fb14c05e288... done ***

*** Program crashed: Illegal instruction at 0x00007fb14c05e288 ***

Thread 0 "main" crashed:

0      0x00007fb14c05e288 _assertionFailure(_:_:file:line:flags:) + 264 in libswiftCore.so
1 [ra] 0x0000558919c3954b get_primes_between #1 (_:_:) in  + 378 in main
2 [ra] 0x0000558919c3db9b main + 5482 in main
3 [ra] 0x00007fb14a8731ca <unknown> in libc.so.6
4 [ra] 0x00007fb14a87328b <unknown> in libc.so.6


Registers:

rax 0x0000000000000000  0
rdx 0x0000000000000002  2
rcx 0x0000000000000006  6
rbx 0x0000558c6ad8a249  94061576364617
rsi 0x8000558919c3fc40  9223466084185930816
rdi 0x00005589324b9f20  a9 94 d8 6a 8c 55 00 00 41 00 00 00 00 00 00 00  ©·Øj·U··A·······
rbp 0x00007fff5bff4450  70 45 ff 5b ff 7f 00 00 4b 95 c3 19 89 55 00 00  pEÿ[ÿ···K·Ã··U··
rsp 0x00007fff5bff43e0  00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  ················
 r8 0x0000558932482010  07 00 03 00 06 00 05 00 07 00 07 00 02 00 02 00  ················
 r9 0x0000000000000007  7
r10 0x00005589324b9f30  49 a2 d8 6a 8c 55 00 00 7b 41 e5 92 02 d7 36 c3  I¢Øj·U··{Aå··×6Ã
r11 0xc336d70292e5417b  14066666892192727419
r12 0x0000000000000000  0
r13 0x00007fff5bff5198  60 b3 4b 32 89 55 00 00 30 9f 4b 32 89 55 00 00  `³K2·U··0·K2·U··
r14 0x0000558919c41bd8  03 00 00 00 00 00 00 00 e8 1f c4 19 89 55 00 00  ········è·Ä··U··
r15 0x00007fb14c4d0000  e0 12 4d 4c b1 7f 00 00 34 00 00 00 00 00 00 00  à·ML±···4·······
rip 0x00007fb14c05e288  0f 0b 48 8d 35 4f 5c fb ff 48 8d 55 a0 45 31 e4  ··H·5O\ûÿH·U E1ä

rflags 0x0000000000010202  

cs 0x0033  fs 0x0000  gs 0x0000


Images (48 omitted):

0x0000558919c32000–0x0000558919c40910 0040240552e56c22a9d304f80f1c5c2c09df1681 main            /tmp/TestSwiftTranspiler_Algorithms_Golden638_maths_primelib2417370187/001/main
0x00007fb14a849000–0x00007fb14a9f8cb9 282c2c16e7b6600b0b22ea0c99010d2795752b5f libc.so.6       /usr/lib/x86_64-linux-gnu/libc.so.6
0x00007fb14bd82000–0x00007fb14c3112d8 7bd479aa5e6f57e6772da70789dcdfa25d5e29b0 libswiftCore.so /root/.local/share/mise/installs/swift/6.1/usr/lib/swift/linux/libswiftCore.so

Backtrace took 0.12s

